Fix title spacing on Maintenance Alerts (#973)

--- a/src/components/pages/maintenance/ruleDetails/ruleDetails.scss
+++ b/src/components/pages/maintenance/ruleDetails/ruleDetails.scss
@@ -5,6 +5,12 @@
 
 .rule-details-container {
 
+  .rule-maintenance-header {
+    font-weight: 700;
+    @include rem-fallback(margin, 0px 10px 10px 0px);
+    @include rem-font-size(42px);
+  }
+
   .rule-stat-container {
     display: flex;
     flex-flow: row wrap;
